--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
     "tests"
   ],
   "dependencies": {
+    "jquery": "~2.1.4",
     "angular": "~1.4.8",
     "angular-ui-router": "~0.2.15",
     "angular-mocks": "~1.4.8",
