--- a/bower.json
+++ b/bower.json
@@ -28,8 +28,10 @@
   ],
   "dependencies": {
     "jquery": "~2.1.4",
+    "fullpage.js": "fullpage#~2.7.4",
     "angular": "~1.4.8",
     "angular-ui-router": "~0.2.15",
     "angular-mocks": "~1.4.8",
+    "angular-fullpage.js": "~0.2.0"
   }
 }
